--- a/css/reviews-and-news.css
+++ b/css/reviews-and-news.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100&display=swap');
+
 h3
 {
 color: blue;
@@ -13,4 +15,12 @@ color: coral;
 h2
 {
     text-align: center;
+    font-family: "Heebo", sans-serif;
+    font-size: 4rem;
+
+}
+.article-button:hover
+{
+    text-decoration: underline;
+    color: black;
 }
