--- a/css/header-section-banner-main.css
+++ b/css/header-section-banner-main.css
@@ -1,6 +1,8 @@
 
 /* Main page styles */
 
+
+
 section div .banner {
     padding: 60px 0 100px 0;
     
@@ -10,25 +12,28 @@ section div .banner {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    overflow-wrap: break-word;
+    /* overflow-wrap: break-word; */
   
     
   }
   
   div .banner__text h1 {
     font-family: var(--additional-font);
-    font-size: 3.25rem;
+    font-size: 3.52rem;
     font-weight: 900;
     line-height: 66px;
     color: #2f2f2f;
-    max-width: 276px;
+    max-width: 332px;
+    height: auto;
       
   }
   div .banner__text p {
-    font-size: 1.05rem;
+    font-size: 1rem;
     color: #3b3b3b;
     line-height: 1.55rem;
     margin-bottom: 40px;
+    height: auto;
+    letter-spacing: normal;
   }
   div .links{
     margin-top: 25px;
@@ -59,5 +64,20 @@ section div .banner {
     margin: 0 0 3px 10px;
     border: 1.5px solid var(--button-colorfull-color);
     background: var(--button-colorfull-color); 
+    
+  }
+
+  @media (min-width: 381px) {
+
+    div .banner__text h1 {
+      
+      max-width: 431px;
+      
+
+        
+    }
+    .container-top {
+      max-width: 431px;
+    }
     
   }
