--- a/css/reviews-and-news.css
+++ b/css/reviews-and-news.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100&family=PT+Sans&display=swap');
+*
+{
+    margin: 0%;
+    padding: 0%;
+}
 h3
 {
 color: blue;
@@ -16,7 +21,15 @@ h2
 {
     text-align: center;
     font-family: "Heebo", sans-serif;
-    font-size: 4rem;
+    font-size: 40px;
+    font-weight: 900;
+    text-transform: none;
+}
+.Popular Articles 
+{
+    text-align: center;
+    font-family: "Heebo", sans-serif;
+}
 
 }
 .article-button:hover
@@ -24,3 +37,14 @@ h2
     text-decoration: underline;
     color: black;
 }
+
+.cards-container
+{
+    flex-direction: row;
+    display: flex;
+
+}
+.Articles-container{
+
+flex-direction: row;
+display: flex;}
