--- a/css/reviews-and-news.css
+++ b/css/reviews-and-news.css
@@ -1,10 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100&family=PT+Sans&display=swap');
-*
-{
-    margin: 0%;
-    padding: 0%;
-}
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700;&display=swap");
+
 h3
 {
 color: blue;
@@ -27,10 +23,8 @@ h2
 }
 .Popular Articles 
 {
-    text-align: center;
-    font-family: "Heebo", sans-serif;
-}
-
+    
+    font-family: "PT Sans", sans-serif;
 }
 .article-button:hover
 {
@@ -44,7 +38,16 @@ h2
     display: flex;
 
 }
-.Articles-container{
+.Articles-container
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.News
+{
+    
+    align-items: center;
+text-align: center;
+}
 
-flex-direction: row;
-display: flex;}
