Added some class styles

--- a/css/speakers-and-video.css
+++ b/css/speakers-and-video.css
@@ -16,3 +16,10 @@
 .Speakers .products{
     display: flex;
 }
+.video{
+    background-image: url(../img/girl3.png);
+    background-size: cover;
+    background-position: center;
+    width: 1349px;
+    height: 703px;
+}
