--- a/css/speakers-and-video.css
+++ b/css/speakers-and-video.css
@@ -1,17 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700;&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Heebo:wght@400;700;900&display=swap");
-.Speakers h2{
-    color:black;
-    font-size: 40px;
+.video-header{
+    color:white;
+    font-size: 60px;
     font-family: Heebo, sans-serif;
+    text-align: left;
+    
 }
 .Speakers img.logo{
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
-.Speakers p{
-    text-align: center;
+.video-text{
+    text-align: left;
+    color: white;
+    font-family: PT Sans,sans-serif;
 }
 .Speakers .products{
     display: flex;
@@ -22,4 +26,5 @@
     background-position: center;
     width: 1349px;
     height: 703px;
+    
 }
