--- a/css/speakers-and-video.css
+++ b/css/speakers-and-video.css
@@ -25,6 +25,10 @@
     background-size: cover;
     background-position: center;
     width: 1349px;
-    height: 703px;
-    
+    height: 703px;  
+}
+.play_button{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
 }
