--- a/css/header-section-banner-main.css
+++ b/css/header-section-banner-main.css
@@ -4,7 +4,9 @@
 
 
 section div .banner {
-    padding: 60px 0 100px 0;
+    padding: 100px 0 130px 0;
+    
+    
     
   }
   section div .banner__text{
@@ -22,14 +24,14 @@ section div .banner {
     font-size: 3.52rem;
     font-weight: 900;
     line-height: 66px;
-    color: #2f2f2f;
+    color: var(--banner-h-color);
     max-width: 332px;
     height: auto;
       
   }
   div .banner__text p {
     font-size: 1rem;
-    color: #3b3b3b;
+    color: var(--banner-p-color);
     line-height: 1.55rem;
     margin-bottom: 40px;
     height: auto;
@@ -52,10 +54,10 @@ section div .banner {
   }
   div .links__about {
     background: var(--button-blue-color);
-    color: #fff;
+    color: var( --light-text-color);
   }
   div .links__shop {
-    color: rgb(42, 42, 42);
+    color: var(--contacts-links-color);
   }
   div .links__shop span::after{
     content: " ";
@@ -68,16 +70,78 @@ section div .banner {
   }
 
   @media (min-width: 381px) {
-
-    div .banner__text h1 {
-      
-      max-width: 431px;
-      
-
-        
-    }
     .container-top {
       max-width: 431px;
     }
+    div .banner__text h1 {   
+      max-width: 431px;    
+    }
     
+    
+  }
+
+  @media (min-width: 480px) {
+    .container-top {
+      max-width: 719px;
+    }
+    div .banner__text h1 {   
+      max-width: 530px;    
+    }
+    
+    
+  }
+  @media (min-width: 768px){
+    .container-top {
+      max-width: 785px;
+    }
+
+    section div .banner__text{
+      width: 50%;
+    }
+    div .banner__text h1 {
+      font-size: 4.41rem;
+      line-height: 4.85rem;
+      margin-top: 0;
+      max-width: 301px;   
+    }
+    
+
+  }
+  @media (min-width: 846px){
+
+    .container-top {
+      max-width: 926px;
+    }
+
+    section div .banner__text{
+      width: 50%;
+      max-width: 463px;
+    }
+    div .banner__text h1 {
+       max-width: 422px;   
+    }
+    
+
+  }
+
+  @media (min-width: 991px){
+    .container-top {
+      max-width: 974px;
+    }
+
+    section div .banner__text{
+      width: 50%;
+      max-width: 472px;
+    }
+    div .banner__text h1 {
+      font-size: 5.3rem;
+      line-height: 5.82rem;
+      margin-top: 0;
+      max-width: 301px;
+      max-width: 449px;   
+    }
+    
+    
+    
+
   }
