--- a/css/reviews-and-news.css
+++ b/css/reviews-and-news.css
@@ -73,9 +73,9 @@ p
     align-items: center;
 }
 
-    body 
+    /* body 
     {max-width: 980px;
         margin: 5px;
         padding: 5px;
-    }
+    } */
 
