--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1,7 +1,7 @@
 
 /* header section css start */
 
-@import url(header-section.css);
+@import url(general.css);
 @import url(header-section-contacts.css);
 @import url(header-section-banner-nav.css);
 @import url(header-section-banner-main.css);
