--- a/css/header-section-banner-nav.css
+++ b/css/header-section-banner-nav.css
@@ -17,12 +17,13 @@
   header .banner-bg {
     min-height: 753px;
     background-size: cover;
-    background-position: center; 
+    background-position: 43.44% 84.95%; 
     
   }
   header .banner-bg_origin {
-    background: url(../img/bg-photos/main-bg.webp);
+    background: url(../img/bg-photos/main-bg.webp) no-repeat;
     padding: 0 24px;
+    background-position: 48.44% 43.95%; 
     
   }
   section div nav .navigation-pages, .navigation-social {
@@ -77,6 +78,10 @@
       section div nav .navigation-pages, .navigation-social {
         display: flex;
       }
+      header .banner-bg {
+        min-height: 100vh;
+        
+      }
 
       section div .navigation {
         display: flex;
@@ -87,10 +92,12 @@
 
       section div nav .navigation-pages {
         font-size: 0.92rem;
+        font-weight: 700;
         color: var(--nav-pages-color);
         min-width: 480px;
         display: flex;
         justify-content: space-around;
+        height: auto;
       }
       section div nav .navigation-pages a {
         font-size: 0.91rem;
@@ -109,3 +116,5 @@
       }
   
     }
+
+    
