--- a/css/header-section-contacts.css
+++ b/css/header-section-contacts.css
@@ -53,19 +53,38 @@
 
     @media (min-width: 991px){
       header .contacts {
-        display: flex;
+        display: block;
         
         
         
       }
       header div .container-top_contacts{
-        display: flex;
-        justify-content: space-between;
-        min-width: 927px;
-        max-width: 974px;
-        margin: 0 auto;
         
-
+        display: grid;
+        grid-template-columns: auto 1fr auto;
+        grid-template-rows: 1fr;
+        max-width: 978px;
+        margin: 0 auto;
       }
 
   }
+  @media (min-width: 1025px){
+    header div .container-top_contacts{ 
+        max-width: 1120px;
+      
+      
+
+    }
+
+}
+@media (min-width: 1280px){
+  header div .container-top_contacts{ 
+      min-width: 1120px;
+      max-width: 60%;
+      /* max-width: 1500px; */
+    
+    
+
+  }
+
+}
