--- a/css/header-section-roundabout.css
+++ b/css/header-section-roundabout.css
@@ -1,5 +1,24 @@
 /* Roundabout with services */
+/* #carouselExampleCaptions{
+  margin: auto;
+  max-width: 60%;
+  padding-top: 50px;
+  
+}
+.carousel-item{
+  max-width: 325px;
+    margin: auto;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 
+} */
+
+
+
+.first-section{
+  background:lavenderblush;
+}
 section div .item{
     max-width: 325px;
     margin: auto;
@@ -18,7 +37,7 @@ section div .item{
   }
   section div .item .item__icon img{
       display: block;
-      width: 60%;
+      width: 60%;!important
   }
   section div .item .item__text{
     text-align: left;
