--- a/css/header-section-special-offers.css
+++ b/css/header-section-special-offers.css
@@ -15,15 +15,17 @@ div .offers-cotainer{
     background-size: cover;
     background-position: 45.78% 50.75%;
     padding: 25px;
-    margin: 50px 0;
+    margin: 60px 0 0 0;
     min-height: 248px;
+    max-width: 100%;
     text-align: left;
   }
   div .offers-cotainer .offer-jbl h2 {
     font-family: var(--additional-font);
     font-size: 2.35rem;
-    line-height: 0;        
+    line-height: 2rem;        
     font-weight: 900;
+    height: auto;
   
   }
   div .offers-cotainer .offer-jbl .offer__strike span{
@@ -37,6 +39,7 @@ div .offers-cotainer{
     font-size: 1.3em;
     font-family: var(--additional-font);
     font-weight: 700;
+     
     color: var(--offer-jbl-color);
   }
   div .offers-cotainer .offer-jbl .offer__text {
@@ -48,7 +51,8 @@ div .offers-cotainer{
     background-size: cover;
     background-position: 48.28% 81.3%;
     padding: 25px;
-    min-height: 383px;  
+    min-height: 383px;
+    max-width: 100%; 
     text-align: left; 
   }
   div .offers-cotainer .offer-special p{
@@ -65,6 +69,56 @@ div .offers-cotainer{
      font-weight: 700;
      color: var(--light-text-color);
      line-height: 1.95rem;
+     height: auto;
   }
+  
+  @media (min-width: 768px){
+    .container-top {
+      max-width: 785px;
+    }
+    div .offers-cotainer{
+      max-width: 718px;
+      
+      
+    }
+    div .offers-cotainer .offer-special h2{
+      line-height: 2.2rem;
+      margin-bottom: 20px;
+   }
+
+    
+    
+
+  }
+  @media (min-width: 768px){
+    .container-top {
+      max-width: 60%;
+      max-height: 360px;
+    }
+    div .offers-cotainer{
+      max-width: 100%;
+      display: grid;
+      grid-template-columns: 3fr 1fr;
+      grid-template-rows: 360px;
+      gap: 15px;
+      min-height: 360px;     
+    }
+   
+    div .offers-cotainer .offer-jbl{
+      margin: 0;
+      min-height: 248px;
+    }
+    
+    div .offers-cotainer .offer-jbl h2 {
+      font-size: 3.52rem;
+      line-height: 3.5rem;
+      height: auto; 
+    }
+    
+    div .offers-cotainer .offer-special{
+      min-height: auto;
+     
+  }
+  
   
   
