--- a/css/header-section-tabs.css
+++ b/css/header-section-tabs.css
@@ -1,5 +1,13 @@
 
 /* Tabs for special offers and services section */
+.sm{
+  max-width: 224px;
+}
+
+#container-top{
+  max-width: 90%;
+  margin: auto;
+}
 
 div .tabs .tabs__head{
     margin-bottom: 25px;
@@ -12,28 +20,31 @@ div .tabs .tabs__head{
   
   #featured, #sale, #new {
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
+    flex-wrap: wrap;
+    margin: auto;
     
   }
   #tab__item{
-    margin: 15px;
+    margin: 5px;
   }
-  #container-top{
-    max-width: 1200px;
-    margin: auto;
-  }
+  
   div .tabs__container{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    max-width: 332px;
+    max-width: 680px;
     margin: auto;
     padding: 25px;
     border: 2px solid var(--background-services-color);
   }
-  div .tabs__container .tabs__image img{
+  #tabs__img{
     display: block;
     max-width: 100%;
+    height: auto;
+    
+    
   }
   div .tabs__container .tabs__product-name {
     color: var(--default-color);
@@ -46,6 +57,44 @@ div .tabs .tabs__head{
     font-weight: 700;
     
   }
+
+  @media (min-width: 768px){
+    #container-top{
+      max-width: 1200px;
+      margin: auto;
+    }
+    #featured, #sale, #new {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      flex-wrap: wrap;
+      
+    }
+    div .tabs__container{
+      max-width: 444px;    
+     }
+  
+
+  }
+  @media (min-width: 991px){
+    #container-top{
+      max-width: 1200px;
+      margin: auto;
+    }
+    #featured, #sale, #new {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      flex-wrap: wrap;
+      
+    }
+    div .tabs__container{
+    max-width: 332px;    
+   }
+
+  }
+
+
 
 
 
