--- a/css/header-section-roundabout.css
+++ b/css/header-section-roundabout.css
@@ -1,23 +1,50 @@
 /* Roundabout with services */
-/* #carouselExampleCaptions{
-  margin: auto;
+#carousel-container{
   max-width: 60%;
-  padding-top: 50px;
+  margin: 50px auto;
+}
+#carousel__logo-bg{
+  max-width: 50px;
+    min-height: 50px;
+    background-color: var(--background-services-color);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#carousel__logo-bg img{
+  width: 60%;
+}
+.carousel-indicators{
+  top: 60px;
+}
+.carousel-indicators [data-bs-target] {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  margin: 0 10px;
+  
+  
   
 }
-.carousel-item{
-  max-width: 325px;
-    margin: auto;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-
-} */
-
-
+.carousel-control-next, .carousel-control-prev{
+  background-color: var(--offer-jbl-strike-color);
+  width: 32px;
+  height: 32px;
+  border: 1px solid black;
+  border-radius: 50%;
+  top: 8px;
+}
 
 
-section div .item{
+
+
+
+
+
+
+
+/* section div .item{
     max-width: 325px;
     margin: auto;
     display: flex;
@@ -53,5 +80,5 @@ section div .item{
   }
   section div .item__text p {
     color: #6c6c6c;
-    line-height: 5px;
+    line-height: 5px; */
   }
