Added animation for <nav links>

--- a/css/header-section-banner-nav.css
+++ b/css/header-section-banner-nav.css
@@ -1,120 +1,121 @@
-
 /* Navigation styles */
-
 
 .container-top {
   max-width: 380px;
   margin: auto;
 }
 
-.container-top_flex{
+.container-top_flex {
+  display: flex;
+  flex-direction: column;
+  max-width: 332px;
+}
+header .banner-bg {
+  min-height: 753px;
+  background-size: cover;
+  background-position: 43.44% 84.95%;
+}
+header .banner-bg_origin {
+  background: url(../img/bg-photos/main-bg.webp) no-repeat;
+  padding: 0 24px;
+  background-position: 48.44% 43.95%;
+}
+section div nav .navigation-pages,
+.navigation-social {
+  display: none;
+}
+
+section div nav .navigation-logo {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 0;
+}
+section div nav .navigation-logo img {
+  max-width: 114px;
+}
+section div nav .navigation__burger-button {
+  display: block;
+  width: 24px;
+  padding: 12px;
+}
+
+@media (min-width: 480px) {
+  .container-top_flex {
     display: flex;
     flex-direction: column;
-    max-width: 332px; 
-    
-  
+    max-width: 431px;
   }
+}
+@media (min-width: 768px) {
   header .banner-bg {
-    min-height: 753px;
-    background-size: cover;
-    background-position: 43.44% 84.95%; 
-    
+    min-height: 983px;
   }
-  header .banner-bg_origin {
-    background: url(../img/bg-photos/main-bg.webp) no-repeat;
-    padding: 0 24px;
-    background-position: 48.44% 43.95%; 
-    
+  .container-top_flex {
+    max-width: 785px;
   }
-  section div nav .navigation-pages, .navigation-social {
+}
+
+@media (min-width: 991px) {
+  section div nav .navigation__burger-button {
     display: none;
   }
-  
-  section div nav .navigation-logo{
-    
+  section div nav .navigation-pages,
+  .navigation-social {
     display: flex;
-    flex-direction: row;
+  }
+  header .banner-bg {
+    min-height: 100vh;
+  }
+
+  section div .navigation {
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 0;
-    
   }
-  section div nav .navigation-logo img {
-    max-width: 114px;
-      
+
+  section div nav .navigation-pages {
+    font-size: 0.92rem;
+    font-weight: 700;
+    color: var(--nav-pages-color);
+    min-width: 480px;
+    display: flex;
+    justify-content: space-around;
+    height: auto;
   }
-  section div nav .navigation__burger-button{
+  section div nav .navigation-pages a {
+    position: relative;
+    font-size: 0.91rem;
+    color: var(--nav-pages-color);
+    font-weight: 700;
+    text-decoration: none;
+    line-height: 1.5rem;
+  }
+  section div nav .navigation-pages a:hover {
+    color: var(--button-black-color);
+  }
+  section div nav .navigation-pages a:after {
+    content: " ";
     display: block;
-    width: 24px;
-    padding: 12px;
+    position: absolute;
+    left: 0;
+    width: 0;
+    height: 3px;
+    border-radius: 0.1rem;
+    background-color: var(--button-black-color);
+    transition: width 0.2s ease-in;
   }
- 
-
-
-   @media (min-width: 480px) {
-
-    .container-top_flex{
-      display: flex;
-      flex-direction: column;
-      max-width: 431px; 
-      
-    
-    }
-     
+  section div nav .navigation-pages a:hover:after {
+    width: 100%;
   }
-    @media (min-width: 768px) {
-        header .banner-bg {
-          min-height: 983px;                   
-        }
-        .container-top_flex{
-          max-width: 785px;       
-        }
-    }
-
-    @media (min-width: 991px){
-      section div nav .navigation__burger-button{
-        display: none;
-      }
-      section div nav .navigation-pages, .navigation-social {
-        display: flex;
-      }
-      header .banner-bg {
-        min-height: 100vh;
-        
-      }
-
-      section div .navigation {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-
-      }
-
-      section div nav .navigation-pages {
-        font-size: 0.92rem;
-        font-weight: 700;
-        color: var(--nav-pages-color);
-        min-width: 480px;
-        display: flex;
-        justify-content: space-around;
-        height: auto;
-      }
-      section div nav .navigation-pages a {
-        font-size: 0.91rem;
-        color: var(--nav-pages-color);
-        font-weight: 700;
-        text-decoration: none;
-      }
-      section div nav .navigation-social{
-        min-width: 172px;
-        display: flex;
-        justify-content: space-around;
-      }
-      section div nav .navigation-social img {
-        max-width: 28px;
-        border-radius: 0.4rem;
-      }
-  
-    }
-
-    
+  section div nav .navigation-social {
+    min-width: 172px;
+    display: flex;
+    justify-content: space-around;
+  }
+  section div nav .navigation-social img {
+    max-width: 28px;
+    border-radius: 0.4rem;
+  }
+}
